# mkdocs-material-iframe-issue-reproduction

./: pyproject.toml
docs/: index.md  noiframe.md
